--- a/01_ReactInterviewQuestions/pagination/src/App.css
+++ b/01_ReactInterviewQuestions/pagination/src/App.css
@@ -21,3 +21,20 @@
   object-fit: cover;
   margin-bottom: 3px;
 }
+
+.pagination {
+  padding: 10px;
+  margin: 15px 0;
+  display: flex;
+  justify-content: center;
+}
+
+.pagination > span {
+  padding: 15px 20px;
+  border: 1px solid gray;
+  cursor: pointer;
+}
+
+.pagination__selected {
+  background-color: #6bc6e1;
+}
